feat: Update to Spring 6/SB3 and Jakarta EE10 spec